--- a/html/regForm.html
+++ b/html/regForm.html
@@ -40,11 +40,16 @@
                             <input class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:border-blue-400"
                                 type="plateNo" id="plateNo" name="plateNo" placeholder="Enter vehicle plate number">
                         </div>
-                        <div class="mb-8">
+                        <div class="mb-4">
+                            <label class="block text-gray-700 text-sm font-bold mb-2" for="contact">Contact No.</label>
+                            <input class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:border-blue-400"
+                                type="contact" id="contact" name="contact" placeholder="Enter owner contact number">
+                        </div>
+                        <!-- <div class="mb-8">
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="contact">Contact No.</label>
                             <input class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:border-blue-400"
                                 type="contact" id="contact" name="contact" placeholder="Enter your contact number">
-                        </div>
+                        </div> -->
                         <div class="flex justify-between items-center mt-4">
                             <button class="w-full py-2 px-4 text-white bg-yellow-500 rounded-lg hover:bg-yellow-600 mr-5" type="submit">Clear</button>
                             <button class="w-full py-2 px-4 text-white bg-blue-500 rounded-lg hover:bg-blue-600 ml-5" type="submit">Submit</button>
