--- a/html/regForm.html
+++ b/html/regForm.html
@@ -38,12 +38,12 @@
                         <div class="mb-4">
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="plateNo">Vehicle Plate No.</label>
                             <input class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:border-blue-400"
-                                type="plateNo" id="plateNo" name="plateNo" placeholder="Enter vehicle plate number">
+                                type="text" id="plateNo" name="plateNo" placeholder="Enter vehicle plate number">
                         </div>
                         <div class="mb-4">
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="contact">Contact No.</label>
                             <input class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:border-blue-400"
-                                type="contact" id="contact" name="contact" placeholder="Enter owner contact number">
+                                type="text" id="contact" name="contact" placeholder="Enter owner contact number">
                         </div>
                         <!-- <div class="mb-8">
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="contact">Contact No.</label>
